--- a/src/components/views/ProductPage/ProductPage.module.scss
+++ b/src/components/views/ProductPage/ProductPage.module.scss
@@ -6,6 +6,8 @@
   .card {
     padding: 15px;
     text-align: center;
+    width: 70%;
+    margin: auto;
 
     .image {
       width: 400px;
@@ -20,7 +22,7 @@
         margin-top: 10px;
       }
       .text {
-        font-size: 18px;
+        font-size: 16px;
         margin-top: 10px;
       }
       .price {
