--- a/src/components/views/Products/Products.module.scss
+++ b/src/components/views/Products/Products.module.scss
@@ -1,4 +1,12 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+  text-align: center;
+  margin: 25px;
+
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+  }
+}
