--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -2,7 +2,7 @@
 
 .root {
   .toolbar {
-    background-color: #9FD9E3;
+    background-color: #9fd3e3;
     .name {
       color: black;
       font-size: 40px;
@@ -12,15 +12,6 @@
       margin-bottom: 15px;
       font-weight: bold;
       font-family: 'Georgia';
-
-    }
-    .cart {
-      .cartContent {
-        background: white;
-        padding: 5px 10px;
-        margin-left: 10px;
-        border-radius: 10px;
-      }
     }
   }
 }
