--- a/src/components/common/ProductCard/ProductCard.module.scss
+++ b/src/components/common/ProductCard/ProductCard.module.scss
@@ -1,13 +1,11 @@
 @import '../../../styles/settings.scss';
 
-
-@import '../../../styles/settings.scss';
-
 .root {
-  margin: 10px;
+  margin: 30px;
 
   .card {
-    padding: 10px;
+    padding: 15px;
+    display: flex;
     .image {
       width: 250px;
       height: 250px;
@@ -16,12 +14,26 @@
     .content {
       .title {
         font-weight: bold;
+        font-size: 18px;
       }
       .price {
-        font-size: 15px;
+        font-size: 18px;
         font-weight: bold;
         margin-top: 10px;
+        color: #f50057;
+        margin-bottom: 10px;
       }
+    }
+    .actions{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .actions > * {
+      margin: 3px;
+      background-color:#cfe4f0;
+      font-weight: bold;
+      z-index: 3;
     }
   }
 }
