--- a/src/components/views/Cart/Cart.module.scss
+++ b/src/components/views/Cart/Cart.module.scss
@@ -1,4 +1,30 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+    .cartButton {
+      margin: 10px;
+    .cartContent {
+      background: white;
+      padding: 5px 10px;
+      margin-left: 15px;
+      border-radius: 12px;
+    }
+  }
+  .cartOpen {
+    position: absolute;
+    height: 100%;
+    width: 700px;
+    left: -600px;
+
+    .cartItems {
+      background-color: #ececec;
+      color: black;
+      box-shadow: 0px 2px 4px 0px #000000;
+      z-index: 10;
+      display: flex;
+      justify-content: space-around;
+      flex-direction: column;
+      position: relative;
+    }
+  }
+}
