--- a/src/components/views/Order/Order.module.scss
+++ b/src/components/views/Order/Order.module.scss
@@ -1,4 +1,46 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+ .root {
+  margin: 30px;
+
+  .title{
+    margin-top: 50px;
+    text-align: center;
+    font-size: 25px;
+    color: #f50057;
+    font-weight: bold;
+  }
+ 
+  .container{
+    width: 80%;
+    margin: auto;
+    padding: 20px;
+  }
+
+  .orderCart {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+  }
+  .orderTable {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    .orderContent {
+      font-weight: bold;
+      font-size: 15px;
+    }
+    .orderTotal {
+      font-size: 20px;
+    }
+  }
+  
+  .buttonWrapper {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
+
+}
