--- a/src/components/views/ProductPage/ProductPage.module.scss
+++ b/src/components/views/ProductPage/ProductPage.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/settings.scss';
 
 .root {
-  margin: 15px;
+  margin-top: 50px;
 
   .card {
     padding: 15px;
@@ -23,17 +23,19 @@
       }
       .text {
         font-size: 16px;
-        margin-top: 10px;
+        margin: 10px;
       }
       .price {
-        font-size: 18px;
+        font-size: 20px;
         font-weight: bold;
-        margin-top: 10px;
+        margin-top: 15px;
+        color: #f50057;
+        margin-bottom: -10px;
       }
     }
-    
+  } 
     .buttonWrap {
       justify-content: center;
     }
-  }
 }
+
