--- a/client/src/components/common/ProductCard/ProductCard.module.scss
+++ b/client/src/components/common/ProductCard/ProductCard.module.scss
@@ -27,13 +27,26 @@
     .actions{
       display: flex;
       flex-direction: column;
+
+      a{
+        text-decoration: none;
+        color: #000000;
+      }
+
+      .button {
+        padding: 6px 9px;
+        margin: 3px;
+        background-color:#cfe4f0;
+        font-weight: bold;
+        border-radius: 5px;
+        transition: all 1s;
+      }
+
+      .button:hover {
+        color: #f50057;
+        background-color:#b5cad6;
+      }
     }
 
-    .actions > * {
-      margin: 3px;
-      background-color:#cfe4f0;
-      font-weight: bold;
-      z-index: 3;
-    }
   }
 }
