--- a/client/src/components/views/Cart/Cart.module.scss
+++ b/client/src/components/views/Cart/Cart.module.scss
@@ -11,16 +11,16 @@
     }
   }
   .cartOpen {
-    position: absolute;
+    position: fixed;;
     height: 100%;
     width: 700px;
-    left: -600px;
+    right: 0;
+    z-index: 10;
 
     .cartItems {
       background-color: #ececec;
       color: black;
       box-shadow: 0px 2px 4px 0px #000000;
-      z-index: 10;
       display: flex;
       justify-content: space-around;
       flex-direction: column;
